--- a/_includes/resume/presentations.liquid
+++ b/_includes/resume/presentations.liquid
@@ -1,14 +1,11 @@
 <ul class="card-text font-weight-light list-group list-group-flush">
-  {% assign presentations = data[1] | sort: 'startDate' | reverse %}
+  {% assign presentations = data[1] | sort: 'date' | reverse %}
   {% for content in presentations %}
     <li class="list-group-item">
       <div class="row">
         <div class="col-xs-2 cl-sm-2 col-md-2 text-center date-column">
-          {% if content.startDate and content.startDate != '' %}
-            {% assign startDate = content.startDate | split: '-' | slice: 0, 2 | join: '.' %}
-            {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
-            {% assign date = startDate | append: ' - ' %}
-            {% assign date = date | append: endDate %}
+          {% if content.date and content.date != '' %}
+            {% assign date = content.date | split: '-' | slice: 0, 2 | join: '.' %}
           {% else %}
             {% assign date = null %}
           {% endif %}
