--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -105,6 +105,8 @@ layout: default
                   {% include resume/awards.liquid %}
                 {% when 'presentations' %}
                   {% include resume/presentations.liquid %}
+                {% when 'reviews' %}
+                  {% include resume/reviews.liquid %}                  
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
