Add new conference

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -103,7 +103,7 @@ layout: default
                   {% include resume/projects.liquid %}
                 {% when 'awards' %}
                   {% include resume/awards.liquid %}
-                {% when 'presentations' %}
+                {% when 'conferences' %}
                   {% include resume/presentations.liquid %}
                 {% when 'reviews' %}
                   {% include resume/reviews.liquid %}                  
