Edit title review to reviewing

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -105,8 +105,8 @@ layout: default
                   {% include resume/awards.liquid %}
                 {% when 'conferences' %}
                   {% include resume/presentations.liquid %}
-                {% when 'reviews' %}
-                  {% include resume/reviews.liquid %}                  
+                {% when 'reviewing' %}
+                  {% include resume/reviewing.liquid %}                  
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
