--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -106,7 +106,9 @@ layout: default
                 {% when 'conferences' %}
                   {% include resume/presentations.liquid %}
                 {% when 'reviewing' %}
-                  {% include resume/reviewing.liquid %}                  
+                  {% include resume/reviewing.liquid %}    
+                {% when 'media publications' %}
+                  {% include resume/press.liquid %}                 
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
