--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -108,7 +108,7 @@ layout: default
                 {% when 'reviewing' %}
                   {% include resume/reviewing.liquid %}    
                 {% when 'media publications' %}
-                  {% include resume/press.liquid %}                 
+                  {% include resume/media_publications.liquid %}                 
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
