--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -107,8 +107,8 @@ layout: default
                   {% include resume/presentations.liquid %}
                 {% when 'reviewing' %}
                   {% include resume/reviewing.liquid %}    
-                {% when 'media publications' %}
-                  {% include resume/media_publications.liquid %}                 
+                {% when 'media' %}
+                  {% include resume/media.liquid %}                 
                 {% when 'skills' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
